kubernetes/basicauth.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: wordpress
spec:
  basicAuth:
    removeHeader: false
    secret: authsecret
