kubernetes/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: wordpress
spec:
  redirectScheme:
    scheme: https
    permanent: true
