kubernetes/deployment-wp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress-container
          image: wordpress:6.1.1
          imagePullPolicy: IfNotPresent          
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: '4Gi'
              cpu: '2000m'
            requests:
              memory: '2Gi'  
              cpu: '1000m' 
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html/wp
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "chown -R www-data:www-data /var/www; chmod -R 774 /var/www"]                        
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-pvc
